--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "*"
-rand_pcg = "*"
+rand = "0.8"
+rand_pcg = "0.3"
 
 [dev-dependencies]
 criterion = "*"
